fixed error, component name was wrong

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,4 @@
 <app-html-form></app-html-form>
 <br>
 <h2>html-table.component.html</h2>
-<app-table-form></app-table-form>
+<app-html-table></app-html-table>
