--- a/src/app/components/html-table/html-table.component.html
+++ b/src/app/components/html-table/html-table.component.html
@@ -1,3 +1,19 @@
 <p>
   html-table works! {{testVariable}}
+<table>
+  <thead>
+    <th>Serial NO</th>
+    <th>Sub Serial</th>
+    <th>Description</th>
+    <th>Data type</th>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td>a</td>
+      <td>Name of the Candidate</td>
+      <tr>String</tr>
+    </tr>
+  </tbody>
+</table>
 </p>
