Added a new table

--- a/src/app/components/html-table/html-table.component.html
+++ b/src/app/components/html-table/html-table.component.html
@@ -1,19 +1,39 @@
-<p>
+
   html-table works! {{testVariable}}
-<table>
-  <thead>
-    <th>Serial NO</th>
-    <th>Sub Serial</th>
-    <th>Description</th>
-    <th>Data type</th>
-  </thead>
-  <tbody>
-    <tr>
-      <td>1</td>
-      <td>a</td>
-      <td>Name of the Candidate</td>
-      <tr>String</tr>
-    </tr>
-  </tbody>
-</table>
-</p>
+  <caption>STUDENT DETAILS</caption>
+  <br>
+  <body>
+      <table>
+          <tr>
+              <th>student id</th>
+              <th>student name</th>
+              <th>section</th>
+              <th>average marks</th>
+              <th>hostel</th>
+          </tr>
+          <br>
+          <tr>
+              <td>1000</td>
+              <td>vignesh</td>
+              <td>6-B</td>
+              <td>73.65</td>
+              <td>false</td>
+          </tr>
+          <br>
+          <tr>
+              <td>3268</td>
+              <td>ramesh</td>
+              <td>4-A</td>
+              <td>82.5</td>
+              <td>true</td>
+          </tr>
+          <br>
+          <tr>
+              <td>1254</td>
+              <td>suresh</td>
+              <td>5-C</td>
+              <td>56.4</td>
+              <td>true</td>        
+          </tr>
+      </table>
+      </body>
